# mcp_example

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
src/mcp_server/: __init__.py  main.py  server.py
tests/: __init__.py  conftest.py  test_integration.py  test_main.py  test_server.py
